--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
-    "expo-font": "^9.2.1",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -27,7 +27,7 @@
     "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
